# agent-backend

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
agentic_framework/: __init__.py  logging_config.py
agentic_framework/core/: __init__.py  agent.py  conversation.py  crew.py  stream_events.py
agentic_framework/llm/: __init__.py
agentic_framework/tools/: __init__.py  base.py
src/: __init__.py
src/ai/: discord_tools.py  tools.py
src/ai/factory/: swarm.py
src/discord/: app.py
tests/: test_agent.py  test_conversation.py  test_crew.py  test_tools.py
