[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-framework"
dynamic = ["version"]
description = "A modular agentic framework for building AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["ai", "agents", "llm", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "litellm",
    "discord.py>=2.3.2",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/yourusername/discord-ai-app"
Repository = "https://github.com/yourusername/discord-ai-app"
Issues = "https://github.com/yourusername/discord-ai-app/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_framework*"]

[tool.setuptools.package-data]
agentic_framework = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "agentic_framework._version.__version__"}
